Fixed several issues: Made decision basic block appear with a triangle, added all loops to have their own subgraph